# mistral

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ablation.yml
docs/: Hacker Guide - Mistral Worldwide Hack.md  PROMPT.md  submission_pitch.md
runs/baseline_adamw_seed42/: config.json
runs/egm_adamw_seed42/: config.json  metrics.csv
runs/smoke_baseline/: config.json  metrics.csv
runs/smoke_egm/: config.json
src/tilde_winner/: __init__.py  ablate.py  config.py  data.py  model.py  optim.py  train.py
