[project]
name = "tilde-winning-arch-mod"
version = "0.1.0"
description = "Mistral-style architectural modification with ablation scripts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "torch>=2.3",
]

[project.scripts]
tilde-train = "tilde_winner.train:main"
tilde-ablate = "tilde_winner.ablate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tilde_winner"]

[tool.uv]
package = true
[project]
name = "tilde-mistral-architect"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.4.0",
  "datasets>=3.3.0",
  "modal>=1.0.0",
  "safetensors>=0.5.3",
  "torch>=2.6.0",
  "transformers>=4.49.0",
  "wandb>=0.19.8",
]

[project.scripts]
tilde-train = "tildehack.train:main"
tilde-eval = "tildehack.eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tildehack"]
