[project]
name = "tilde-winning-arch-mod"
version = "0.1.0"
description = "Mistral-style architectural modification with ablation scripts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "torch>=2.3",
]

[project.scripts]
tilde-train = "tilde_winner.train:main"
tilde-ablate = "tilde_winner.ablate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tilde_winner"]

[tool.uv]
package = true
